<resources>
    <string name="app_name">DesafioFirebaseDH</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="login">Log in</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="imagem_do_game">Imagem do Game</string>
    <string name="nome_do_jogo">Nome do Jogo</string>
    <string name="_2020">2020</string>
    <string name="campo_vazio">Campo Vazio!</string>
    <string name="numero_caracteres">Senha com mínimo de 6 caracteres!</string>
    <string name="senha_diferente">As senhas não coincidem!</string>
    <string name="created_at">Created at</string>
    <string name="save_game">SAVE GAME</string>
    <string name="description">Description</string>
    <string name="texto_texto_texto">Texto texto texto</string>
</resources>