<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="190dp"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgCard"
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:contentDescription="@string/imagem_do_game"
            android:scaleType="centerCrop"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/nome_do_jogo"
            android:textColor="@color/txtBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/_2020"
            android:textColor="@color/colorGray" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>