<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.desafioFirebaseDH.view.CreateGameActivity">

    <ImageView
        android:id="@+id/imgBackgroundLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splash_screen_image"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher_foreground" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imagemDoJogo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/imagem_do_game"
        android:elevation="15dp"
        android:src="@color/btnLogin"
        app:civ_border_color="@color/btnLogin"
        app:layout_constraintBottom_toTopOf="@+id/cardView_CreateGame"
        app:layout_constraintEnd_toEndOf="@+id/cardView_CreateGame"
        app:layout_constraintStart_toStartOf="@+id/cardView_CreateGame"
        app:layout_constraintTop_toTopOf="@+id/cardView_CreateGame" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_camera_add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_baseline_camera_alt_24"
        android:backgroundTint="@color/colorWhite"
        android:contentDescription="@string/imagem_do_game"
        android:elevation="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView_CreateGame"
        app:layout_constraintEnd_toEndOf="@+id/cardView_CreateGame"
        app:layout_constraintStart_toStartOf="@+id/cardView_CreateGame"
        app:layout_constraintTop_toTopOf="@+id/cardView_CreateGame" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView_CreateGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorWhite"
        android:foregroundGravity="center"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBackgroundLogin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/game_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/gameEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorWhite"
                android:inputType="text"
                android:singleLine="true"
                android:gravity="top"
                android:textColor="@color/txtUser" />

            <TextView
                android:id="@+id/created_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/created_at"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/createdAtEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorWhite"
                android:inputType="text"
                android:singleLine="true"
                android:gravity="top"
                android:textColor="@color/txtUser" />

            <TextView
                android:id="@+id/description_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/description"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorWhite"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:layout_gravity="top"
                android:textColor="@color/txtUser" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSalvarGame"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/save_game"
                android:textSize="15sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>