<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.register.RegisterActivity">

    <ImageView
        android:id="@+id/imgBackgroundRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splash_screen_image"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher_foreground" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorWhite"
        android:foregroundGravity="center"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgBackgroundRegister"
        app:layout_constraintEnd_toEndOf="@+id/imgBackgroundRegister"
        app:layout_constraintStart_toStartOf="@+id/imgBackgroundRegister"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_register_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/colorWhite"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/txtUser"
                    app:errorEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_register_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/colorWhite"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/txtUser"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_register_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/colorWhite"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/txtUser"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_repeat_register_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPasswordRepeatRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/colorWhite"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/txtUser"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreateAccountRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/create_account"
                android:textSize="15sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>